--- a/frontend/src/app/signup/signup-styles.css
+++ b/frontend/src/app/signup/signup-styles.css
@@ -1,20 +1,10 @@
-.appname-container {
-  top: 28px;
-  left: 45px;
-  height: 57px;
-  width: 137px;
-  position: absolute;
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.login .mantine-PasswordInput-input,
-.login .mantine-TextInput-input {
-  height: 56px;
+.signup .mantine-PasswordInput-input,
+.signup .mantine-TextInput-input,
+.signup .mantine-DateInput-input {
+  height: 50px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border-radius: 20px;
+  border-radius: 16px;
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
@@ -27,13 +17,14 @@
 }
 
 .input--dark-mode .mantine-PasswordInput-input,
-.input--dark-mode .mantine-TextInput-input {
+.input--dark-mode .mantine-TextInput-input,
+.input--dark-mode .mantine-DateInput-input {
   border: 0;
   color: #787878e5;
   background-color: #1b2733;
 }
 
-.login-button {
+.signup-button {
   width: 100%;
   height: 48px;
   border-radius: 20px;
@@ -41,12 +32,12 @@
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-.login-button--dark-mode {
+.signup-button--dark-mode {
   background: #131b23;
   border: 2px solid #3496619c;
 }
 
-.login-button .mantine-Button-inner {
+.signup-button .mantine-Button-inner {
   font-size: 18px;
   color: #000000;
   text-align: left;
@@ -55,6 +46,6 @@
   letter-spacing: -0.005em;
 }
 
-.login-button--dark-mode .mantine-Button-inner {
+.signup-button--dark-mode .mantine-Button-inner {
   color: #5fe996;
 }
