--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient--dark-mode {
+  background: linear-gradient(180deg, #2f7149 0%, #044e40 89.81%, #043429 100%);
+}
+
+.gradient--light-mode {
+  background: linear-gradient(180deg, #2c6f48 0%, #04392e 100%);
+}
