--- a/frontend/src/app/journeys/journey-styles.css
+++ b/frontend/src/app/journeys/journey-styles.css
@@ -1,3 +1,8 @@
+.modal .mantine-Modal-header,
+.modal .mantine-Modal-content {
+  color: white;
+  background: #1b2733;
+}
 .gradient--dark-mode {
   background: linear-gradient(180deg, #2f7149 0%, #044e40 89.81%, #043429 100%);
 }
