Added dark mode and responsiveness to friends stats page.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,3 +9,8 @@
 .gradient--light-mode {
   background: linear-gradient(180deg, #2c6f48 0%, #04392e 100%);
 }
+
+.dark-map {
+  filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3)
+    brightness(0.7);
+}
