--- a/frontend/src/app/login/login-styles.css
+++ b/frontend/src/app/login/login-styles.css
@@ -7,6 +7,13 @@
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
+.login .mantine-PasswordInput-label,
+.login .mantine-TextInput-label {
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+}
+
 .gradient--dark-mode {
   background: linear-gradient(180deg, #2f7149 0%, #044e40 89.81%, #043429 100%);
 }
