--- a/frontend/src/app/signup/signup-styles.css
+++ b/frontend/src/app/signup/signup-styles.css
@@ -8,6 +8,14 @@
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
+.mantine-PasswordInput-label,
+.mantine-TextInput-label,
+.mantine-DateInput-label {
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .gradient--dark-mode {
   background: linear-gradient(180deg, #2f7149 0%, #044e40 89.81%, #043429 100%);
 }
