Bug Fixes and Added Accessibility to Payments.

--- a/frontend/src/app/membership/membership-styles.css
+++ b/frontend/src/app/membership/membership-styles.css
@@ -50,7 +50,7 @@
 .cancel-button {
   width: 154px;
   height: 45px;
-  color: white;
+  color: black;
   border-radius: 20px;
   background: #349661;
 }
